<resources>
    <string name="app_name">StudyApplication</string>

    <!--Copy-->
    <string name="longitude_label">Longitude</string>
    <string name="latitude_label">Latitude</string>
    <string name="address_label">Address</string>
    <string name="button_label">SEND SMS</string>

    <string name="zero">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav">Nav</string>
    <string name="intentBtn">Intent</string>
    <string name="tempBtn">GetActivity</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="unbind_service">Unbind</string>
    <string name="bind_service">Bind</string>
    <string name="start_worker">Start Worker</string>
    <string name="stop_worker">Stop Worker</string>
</resources>