<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/loadingSpinnerContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/colorPrimary">

            <ProgressBar
                android:id="@+id/loadingSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:visibility="gone" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/statusMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/startWorker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_worker"
            app:layout_constraintBottom_toTopOf="@id/startServiceBtn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/stopWorker" />

        <Button
            android:id="@+id/stopWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_worker"
            app:layout_constraintBottom_toTopOf="@id/stopServiceBtn"
            app:layout_constraintLeft_toRightOf="@id/startWorker"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/startServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            app:layout_constraintBottom_toTopOf="@id/bindServiceBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/stopServiceBtn" />

        <Button
            android:id="@+id/stopServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            app:layout_constraintBottom_toTopOf="@id/bindServiceBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@id/startServiceBtn"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/bindServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_service"
            app:layout_constraintBottom_toTopOf="@id/navBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/stopServiceBtn" />

        <Button
            android:id="@+id/unbindServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service"
            app:layout_constraintBottom_toTopOf="@id/navBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@id/startServiceBtn"
            app:layout_constraintRight_toRightOf="parent" />


        <Button
            android:id="@+id/navBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/intentBtn" />

        <Button
            android:id="@+id/intentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intentBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/navBtn"
            app:layout_constraintRight_toLeftOf="@id/tempBtn" />

        <Button
            android:id="@+id/tempBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/intentBtn"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>